5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1594_1801.log
== TEST (2019-04-26 15:06:36) 
-- CODE:
input('digite: ')
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:39:21) 
-- CODE:
feitico = input("")
repeticoes = input("")
print('feitico' + 'repeticoes*')
-- OUTPUT:
feiticorepeticoes*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:39:55) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
print('feitico' + 'repeticoes*')
-- OUTPUT:
feiticorepeticoes*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:40:37) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
print
-- OUTPUT:
feiticorepeticoes*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:42:36) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico*repeticoes
print("abra" + "total")
-- OUTPUT:
abratotal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:44:29) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico*repeticoes
print("abra" + "total")
-- EXECUTION TIME:
0.12538
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abratotal
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abratotal
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abratotal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:44:36) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico*repeticoes
print("abra" + "total")
-- OUTPUT:
abratotal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:45:08) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" + "total")
-- OUTPUT:
abratotal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:45:26) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" + "total")
-- OUTPUT:
abratotal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:45:50) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" + total)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:46:05) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" + total)
-- EXECUTION TIME:
0.138109
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:46:17) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" + total)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:47:29) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" + total)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:48:33) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra"*total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("abra"*total)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:48:56) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" * total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("abra" * total)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:49:19) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" +total)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:51:59) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("abra" +total)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:54:15) 
-- CODE:
feitico = input("")
repeticoes = float(input(""))
total = feitico * repeticoes
print("Abra" + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = feitico * repeticoes
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:54:37) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("Abra" + total)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:55:07) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("Abra" (*) + total)
-- ERROR:
File "XXXX", line 4
    print("Abra" (*) + total)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:55:25) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("Abra" + total)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:56:04) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("Abra" + total)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:57:11) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("Abra" + total)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:59:17) 
-- CODE:
feitico = input("")
repeticoes = int(input(""))
total = feitico * repeticoes
print("Abra" +  total)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:10:19) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" +  total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra" +  total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:10:43) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" +  feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:21:57) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" +  feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:33:54) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" +  feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:35:01) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" +  "Abra * feitico")
-- OUTPUT:
AbraAbra * feitico
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:35:30) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" + feitico")
-- ERROR:
File "XXXX", line 4
    print("Abra" + feitico")
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:35:40) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" + feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:36:00) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" * feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra" * feitico)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:36:14) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra" + feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:36:57) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:42:12) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print(*"Abra " + feitico)
-- OUTPUT:
A b r a   l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:42:32) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print(*"Abra " + feitico)
-- EXECUTION TIME:
0.235806
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
A b r a   l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
A b r a   c a r r o c a r r o
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
A b r a   c a i x a
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:42:51) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra "* + feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra "* + feitico)
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:48:52) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico )
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:53:40) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print(Abra  + feitico )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Abra  + feitico )
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:54:38) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:56:15) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:56:56) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:59:19) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra *" + feitico)
-- OUTPUT:
Abra *livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:59:50) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print(*"Abra " + feitico)
-- OUTPUT:
A b r a   l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:54:14) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print(*"Abra " + feitico)
-- EXECUTION TIME:
0.158262
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
A b r a   l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
A b r a   c a r r o c a r r o
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
A b r a   c a i x a
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:13:45) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print(*"Abra " + feitico)
-- OUTPUT:
A b r a   l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o l i v r o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:52:41) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 16:56:43) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 16:58:56) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto + repeticoes
print("Abra " * feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = objeto + repeticoes
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 16:59:17) 
-- CODE:
objeto = input("")
repeticoes = float(input(""))
feitico = objeto + repeticoes
print("Abra " * feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = objeto + repeticoes
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:00:15) 
-- CODE:
objeto = input("")
repeticoes = float(input(""))
feitico = objeto + repeticoes
print("Abra " * feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = objeto + repeticoes
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:01:01) 
-- CODE:
objeto = input("")
repeticoes = float(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = objeto * repeticoes
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:01:22) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:01:22) 
-- CODE:
objeto = input("")
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:01:40) 
-- CODE:
objeto = int(input(""))
repeticoes = int(input(""))
feitico = objeto * repeticoes
print("Abra " + feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    objeto = int(input(""))
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
